@@ -3,7 +3,7 @@ module NewRelic
   module VERSION #:nodoc:
     MAJOR = 2
     MINOR = 10
-    TINY  = 6
+    TINY  = 7
     EXPERIMENTAL = nil 
     STRING = [MAJOR, MINOR, TINY, EXPERIMENTAL].compact.join('.')
   end
