@@ -2,6 +2,9 @@ v2.10.7
   * fix problem with the Authlogic metric names which caused errors in
     developer mode.  Authlogic metrics now adhere to the convention of
     prefixing the name with  'Custom'
+  * allow more correct overriding of transaction trace settings in the 
+    call to #manual_start
+  * simplify WorkerLoop and add better protection for concurrency
     
 v2.10.6
   * fix missing URL and referer on some traced errors and transactions
